k8s/expose-metrics/03-kubelet-proxy.yaml
# creates a DaemonSet that runs on every node and proxies traffic to the kubelet on 127.0.0.1:10250
# because I need to expose it on each pod’s node IP directly via hostNetwork.
apiVersion: v1
kind: Service
metadata:
  name: kubelet
  namespace: monitoring
  labels:
    app: kubelet
spec:
  clusterIP: None  # Headless service
  ports:
    - name: https
      port: 10250
      targetPort: 10250
  selector:
    app: kubelet-proxy
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: kubelet-proxy
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: kubelet-proxy
  template:
    metadata:
      labels:
        app: kubelet-proxy
    spec:
      hostNetwork: true
      containers:
        - name: kubelet-proxy
          image: alpine/socat
          args: ["tcp-listen:10250,fork,reuseaddr", "tcp:127.0.0.1:10250"]
          securityContext:
            privileged: true
      tolerations:
        - operator: Exists
