k8s/expose-metrics/03-kubelet-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubelet
  namespace: monitoring
spec:
  type: ExternalName
  externalName: kubelet.shakir.cloud
  ports:
    - port: 10250
      targetPort: 10250
      protocol: TCP
